[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/admob/scripts/AdMobConfig.gd" type="Script" id=1]

[node name="AdMobConfig" type="Control"]
pause_mode = 2
anchor_right = 1.144
anchor_bottom = 1.00111
margin_bottom = -6.10352e-05
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 556.0
margin_bottom = 419.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentVersion" type="Label" parent="VBoxContainer"]
margin_right = 532.0
margin_bottom = 14.0
text = "Version: 0.3.2"

[node name="Enabled" type="CheckBox" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 532.0
margin_bottom = 42.0
pressed = true
text = "Enabled"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Real" type="CheckBox" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 532.0
margin_bottom = 70.0
text = "Real"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestEuropeUserConsent" type="CheckBox" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 532.0
margin_bottom = 98.0
pressed = true
text = "Test Europe User Consent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSizeHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 532.0
margin_bottom = 122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/BannerSizeHBoxContainer"]
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "Banner Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSize" type="OptionButton" parent="VBoxContainer/BannerSizeHBoxContainer"]
margin_left = 79.0
margin_right = 161.0
margin_bottom = 20.0
text = "BANNER"
items = [ "BANNER", null, false, 0, null, "MEDIUM_RECTANGLE", null, false, 1, null, "FULL_BANNER", null, false, 2, null, "LEADERBOARD", null, false, 3, null, "ADAPTIVE", null, false, 4, null, "SMART_BANNER", null, false, 5, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerOnTop" type="CheckBox" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 532.0
margin_bottom = 150.0
text = "Banner On Top"

[node name="ChildDirectedTreatment" type="CheckBox" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 532.0
margin_bottom = 178.0
pressed = true
text = "Child Directed Treatment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAdContentRating" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 532.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/MaxAdContentRating"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "MaxAdContentRating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="OptionButton" parent="VBoxContainer/MaxAdContentRating"]
margin_left = 136.0
margin_right = 175.0
margin_bottom = 20.0
text = "G"
items = [ "G", null, false, 0, null, "PG", null, false, 1, null, "T", null, false, 2, null, "MA", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIds" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 532.0
margin_bottom = 356.0
rect_min_size = Vector2( 532, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="VBoxContainer/UnitIds"]
margin_top = 68.0
margin_right = 58.0
margin_bottom = 82.0
text = "UNIT IDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/UnitIds"]
margin_left = 62.0
margin_right = 532.0
margin_bottom = 150.0
size_flags_horizontal = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Android" type="GridContainer" parent="VBoxContainer/UnitIds/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_right = 436.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/6300978111"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key2" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 33.0
margin_right = 129.0
margin_bottom = 47.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interstitial" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 28.0
margin_right = 436.0
margin_bottom = 52.0
text = "ca-app-pub-3940256099942544/1033173712"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key3" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 61.0
margin_right = 129.0
margin_bottom = 75.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rewarded" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 56.0
margin_right = 436.0
margin_bottom = 80.0
text = "ca-app-pub-3940256099942544/5224354917"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key4" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_top = 89.0
margin_right = 129.0
margin_bottom = 103.0
text = "RewardedInterstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedInterstitial" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_left = 133.0
margin_top = 84.0
margin_right = 436.0
margin_bottom = 108.0
text = "ca-app-pub-3940256099942544/5354046379"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="iOS" type="GridContainer" parent="VBoxContainer/UnitIds/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_right = 436.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/2934735716"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key2" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 33.0
margin_right = 129.0
margin_bottom = 47.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interstitial" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 28.0
margin_right = 436.0
margin_bottom = 52.0
text = "ca-app-pub-3940256099942544/4411468910"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key3" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 61.0
margin_right = 129.0
margin_bottom = 75.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rewarded" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 56.0
margin_right = 436.0
margin_bottom = 80.0
text = "ca-app-pub-3940256099942544/1712485313"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Key4" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_top = 89.0
margin_right = 129.0
margin_bottom = 103.0
text = "RewardedInterstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardedInterstitial" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_left = 133.0
margin_top = 84.0
margin_right = 436.0
margin_bottom = 108.0
text = "ca-app-pub-3940256099942544/6978759866"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="SupportVersion" type="Label" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 532.0
margin_bottom = 425.0
text = "Supported Plugin Versions:

iOS: 1.0.0
Android: 1.0.0"

[node name="InstallationTutorial" type="LinkButton" parent="VBoxContainer"]
margin_top = 429.0
margin_right = 532.0
margin_bottom = 443.0
text = "INSTALLATION TUTORIAL"

[connection signal="pressed" from="VBoxContainer/Enabled" to="." method="_on_Enabled_pressed"]
[connection signal="pressed" from="VBoxContainer/Real" to="." method="_on_Real_pressed"]
[connection signal="pressed" from="VBoxContainer/TestEuropeUserConsent" to="." method="_on_TestEuropeUserConsent_pressed"]
[connection signal="item_selected" from="VBoxContainer/BannerSizeHBoxContainer/BannerSize" to="." method="_on_BannerSize_item_selected"]
[connection signal="pressed" from="VBoxContainer/BannerOnTop" to="." method="_on_BannerOnTop_pressed"]
[connection signal="pressed" from="VBoxContainer/ChildDirectedTreatment" to="." method="_on_ChildDirectedTreatment_pressed"]
[connection signal="item_selected" from="VBoxContainer/MaxAdContentRating/Value" to="." method="_on_MaxAdContentRating_item_selected"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/Banner" to="." method="_on_AndroidBanner_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/Interstitial" to="." method="_on_AndroidInterstitial_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/Rewarded" to="." method="_on_AndroidRewarded_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/RewardedInterstitial" to="." method="_on_AndroidRewardedInterstitial_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/Banner" to="." method="_on_iOSBanner_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/Interstitial" to="." method="_on_iOSInterstitial_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/Rewarded" to="." method="_on_iOSRewarded_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/RewardedInterstitial" to="." method="_on_iOSRewardedInterstitial_text_changed"]
[connection signal="pressed" from="VBoxContainer/InstallationTutorial" to="." method="_on_InstallationTutorial_pressed"]
